--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     }],
   "require": {
     "php": "^8.2",
-    "illuminate/bus": "^10.2|^11.0|^12.0",
-    "illuminate/conditionable": "^10.2|^11.0|^12.0",
-    "illuminate/console": "^10.2|^11.0|^12.0",
-    "illuminate/support":  "^10.2|^11.0|^12.0",
-    "illuminate/database": "^10.2|^11.0|^12.0",
-    "illuminate/pipeline": "^10.2|^11.0|^12.0",
+    "illuminate/bus": "^10.2|^11.0",
+    "illuminate/conditionable": "^10.2|^11.0",
+    "illuminate/console": "^10.2|^11.0",
+    "illuminate/support":  "^10.2|^11.0",
+    "illuminate/database": "^10.2|^11.0",
+    "illuminate/pipeline": "^10.2|^11.0",
     "spatie/laravel-package-tools": "^1.16.1",
     "league/csv": "^9.24"
   },
