--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "illuminate/conditionable": "^10.2|^11.0|^12.0",
     "illuminate/validation": "^10.2|^11.0|^12.0",
     "illuminate/console": "^10.2|^11.0|^12.0",
+    "illuminate/http": "^10.2|^11.0|^12.0",
     "illuminate/support":  "^10.2|^11.0|^12.0",
     "illuminate/database": "^10.2|^11.0|^12.0",
     "illuminate/pipeline": "^10.2|^11.0|^12.0",
